Working ship addition and placement. WIP game play

--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,30 @@
     <artifactId>battleship_a</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>exec-maven-plugin</artifactId>
+                    <version>1.2.1</version>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>java</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <mainClass>com.battleship.application.GameServer</mainClass>
+                        <!--<arguments>-->
+                            <!--<argument>foo</argument>-->
+                            <!--<argument>bar</argument>-->
+                        <!--</arguments>-->
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
     
 </project>
